fix(12): Fixed issue with overflow-x at body level.

--- a/src/main/assets/css/main.css
+++ b/src/main/assets/css/main.css
@@ -13,6 +13,7 @@ body {
     width: 100vw;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow-x: hidden;
 }
 
 .guides {
